# cmake-learning

./: README.md
t1/: CMakeCache.txt  CMakeLists.txt  HELLO  Makefile  cmake_install.cmake  main.c
t2/: CMakeLists.txt  README.md  hello.txt
t2/src/: main.c
t3/: CMakeLists.txt  README.md
t3/lib/: CMakeLists.txt  hello.c
t4/: CMakeLists.txt  README.md
t4/src/: CMakeLists.txt
t5/: CMakeLists.txt  README.md
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt  README.md
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt
